descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2009-06-XX  Release 7.14.10                                    ---
----------------------------------------------------------------------

* search command now works in Archer - Cliff Yapp
* make_bb now handles empty combinations correctly - Bob Parker
* no more rtweight crashing when PWD or HOME are unset - Sean Morrison
* fixed "Invalid NMG" empty output bug in g-stl - Sean Morrison
* fixed Mac OS X 10.5 OGL and X11 display manager crash affecting mged
	- Sean Morrison, Mike Tegtmeyer, Tim Myers
* added experimental exporter to Panda3d EGG format - Erik Greenwald
* fixed compilation support for Mac OS X 10.5 - Sean Morrison
* add bb command to report size of and create bounding boxes - C. Yapp
* reordering of and additions to Archer button menu - Cliff Yapp
* extensive NURBS raytracing improvements - Keith Bowman, Cliff Yapp
* initial undo support for Archer - Bob Parker
* raytracers respect secondary ray overlap reporting - Sean Morrison
* add dynamic sampling for NURBS wireframe drawing - Cliff Yapp
* changed mged 'help' output formatting - Sean Morrison
* improved 'e_id' mged command help - Sean Morrison
* archer interactive editing support for most primitives - Bob Parker
* added '-v' to mged for version information - Erik Greenwald


----------------------------------------------------------------------
--- 2009-05-11  Release 7.14.8                                     ---
----------------------------------------------------------------------

* fix trimming bug in tire tread for wide tires - Cliff Yapp
* archer interactive edit support for arb8, tor, ell, ehy - Bob Parker
* improved asc2g handling of large BoT conversions - Keith Bowman
* conversion of mged and archer to use new ttk widgets - Bob Parker